Closed Bug 378407 Opened 18 years ago Closed 18 years ago

[FIX]Plaintext serialization of <q> should always add quotes

Categories

(Core :: DOM: Serializers, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha6

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Attached patch Proposed changeSplinter Review
Right now we do this only when nsIDocumentEncoder::OutputFormatted is set. But unlike the other formatting (* * for bold, _ _ for underline, etc) that we can output, quotes should really be added to <q> unconditionally; these characters are not just a convention to indicate bolding or underlining but what <q> really _means_. As a side effect, a selection that actually contains part of a <q> will put quotes around that part when pasted into a plaintext context. This is, imo, desirable. Note that this is NOT a duplicate of bug 12460. That kettle of fish is something else entirely.
Attachment #262464 - Flags: superreview?(jonas)
Attachment #262464 - Flags: review?(daniel)
> As a side effect, a selection that actually contains part of a <q> will put > quotes around that part when pasted into a plaintext context. This is, imo, > desirable. I disagree. I frequently paste sentences from web pages into IRC or AIM or del.icio.us by typing: double-quote, Cmd+V, double-quote. I don't want to be surprised by extra quotes when I paste from a site that happens to use the <q> tag around a (more complete) quote.
> I disagree. I'm not sure you understood the setup that will ensue with this patch. If the selection is entirely within the <q>, there will be no quotes added. But if part of the selection is inside the <q> and part is outside, the part that was inside will get quoted. One thing I _am_ worried about here is i18n. This patch always adds English quotes. I'm not sure whether that's desirable, or whether we should add quotes based on default locale or page language or whatnot...
> If part of the selection is inside the <q> and part is outside, the part > that was inside will get quoted. Oh. That's fine, I think.
Attachment #262464 - Flags: superreview?(jonas) → superreview+
Target Milestone: mozilla1.9alpha4 → mozilla1.9alpha6
Comment on attachment 262464 [details] [diff] [review] Proposed change Yes. But what is NOT ok is the total lack of internationalization of this serialization. If english and US english use double quotes around <q>, french uses «...» or sometimes ”...„ We know how to do it for <q>'s rendering, we should be able to do it too for the plaintext serialization. I recommend filing another bug immediately for that. r=danie@glazman.rgo
Attachment #262464 - Flags: review?(daniel) → review+
Yeah, indeed. Filed bug 383343.
Checked in. Still need a unit test...
Flags: in-testsuite?
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
In particular, we need a scriptable way to create HTML documents. I _think_ we have a scriptable way to do plaintext serialization.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: