When serializing a <q> as plaintext, put in quotes even if we're not doingformatted output.  Bug 378407, r=glazman, sr=sicking